2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Makefile.am (EXTRA_DIST): Removed dsextras.py

	* dsextras.py: Removed.

	* setup.py.in: Use dsextras installed by PyGTK.

2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gdkgl/ext.py: New gtk.gdkgl.ext() function to add OpenGL
	extension API support to the Gdk object.
	e.g. pixmap = gtk.gdkgl.ext(gtk.gdkgl.Pixmap(...))
	     glpixmap = pixmap.set_gl_capability(glconfig)
	     pixmap.is_gl_capable()

	* gtk/gdkgl/__init__.py: Import ext module.

	* setup.py.in: 
	* gtk/gdkgl/Makefile.am (pygdkgl_PYTHON): Added ext.py.

	* examples/pixmap-mixed.py (PixmapMixedDemo.__configure_event): 
	* examples/pixmap.py (PixmapDemo.__configure_event): Use
	gtk.gdkgl.ext().

2003-08-23  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.99.1

	* configure.in: Bumped version.

	* README.win32: Removed old PyGTK installtion instruction.

2003-08-21  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/coolwave.py (CoolWave.init): Check GL_VERSION_1_1.
	If OpenGL version 1.1 is not supported, EXT.polygon_offset
	extension is used.
	(CoolWave.idle): Use idle instead of timeout for (my) slow
	machines.
	(CoolWave.key_press): Call toggle_idle() instead of toggle_timeout().
	(CoolWave.__setup_arrays): Suppress python 2.3 deprecation
	warnings (non-integer arguments for range()).

2003-08-21  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/Makefile.am (coolwave.py):
	* examples/coolwave.py: Added new example program. This is
	again another mapping from C to Python. The original
	program 'coolwave.c' comes with GtkGLExt. It's a good
	example of how to use the latest gtk.gtkgl.apputils
	module quite extensively.

2003-08-18  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font.py:
	* examples/button.py: Don't use apputils module.

	* examples/MoveLight.py:
	* examples/NeHe6Multi.py:
	* examples/Shapes.py:
	* examples/SimpleScene.py:
	* examples/button.py: